@@ -2,7 +2,7 @@ package com.maxmind.minfraud.exception;
 
 import org.junit.Test;
 
-import java.net.URL;
+import java.net.URI;
 
 import static org.junit.Assert.assertEquals;
 
@@ -10,9 +10,9 @@ public class HttpExceptionTest {
 
     @Test
     public void testHttpException() throws Exception {
-        URL url = new URL("https://www.maxmind.com/");
-        HttpException e = new HttpException("message", 200, url);
+        URI uri = new URI("https://www.maxmind.com/");
+        HttpException e = new HttpException("message", 200, uri);
         assertEquals("correct status", 200, e.getHttpStatus());
-        assertEquals("correct URL", url, e.getUrl());
+        assertEquals("correct URL", uri, e.getUri());
     }
 }
