@@ -2,7 +2,7 @@ package com.maxmind.minfraud.exception;
 
 import org.junit.Test;
 
-import java.net.URL;
+import java.net.URI;
 
 import static org.junit.Assert.assertEquals;
 
@@ -10,12 +10,12 @@ public class InvalidRequestExceptionTest {
 
     @Test
     public void testInvalidRequestException() throws Exception {
-        URL url = new URL("https://www.maxmind.com/");
+        URI uri = new URI("https://www.maxmind.com/");
         String code = "INVALID_INPUT";
         int status = 400;
-        InvalidRequestException e = new InvalidRequestException("message", code, status, url, null);
+        InvalidRequestException e = new InvalidRequestException("message", code, status, uri, null);
         assertEquals("correct code", code, e.getCode());
         assertEquals("correct status", status, e.getHttpStatus());
-        assertEquals("correct URL", url, e.getUrl());
+        assertEquals("correct URL", uri, e.getUri());
     }
 }
